<resources>
    <string name="app_name">Mobile Realty</string>
    <string name="app_name_ru">Риелтор</string>
    <string name="app_version">v 1.0.0. BETA</string>
    <string name="save_password">Запомнить меня</string>
    <string name="login_error">Неправильный логин или пароль!</string>
    <string name="text_hint_login"><font size="12">Логин...</font></string>
    <string name="text_hint_password"><font size="12">Пароль...</font></string>
    <string name="title_activity_main_menu"></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="realty_object">Объекты</string>
    <string name="realty_reports">Отчеты</string>
    <string name="account">Аккаунт</string>
    <string name="dashboard">Рабочий стол</string>
    <string name="auth_progress">Войти</string>
    <string name="check_hasConnection">Отсутствует соединение с Интернетом!</string>
    <string name="check_error_authorization">Ошибка авторизации</string>
    <string name="check_error">Ошибка соединения с сервером</string>
    <string name="alertdialog_ok">ПОНЯТНО</string>
    <string name="alertdialog_permission_gained">Предоставить доступ</string>
    <string name="app_exit">Выйти</string>
    <string name="tasks">Задачи</string>
    <string name="reservations">Брони</string>
    <string name="reports">Отчеты</string>
    <string name="realty_objects">Объекты недвижимости</string>
    <string name="realty_objects_chess">Квартирограмма</string>
    <string name="square_meter"> м²</string>
    <string name="action_object_reservation">Забронировать</string>
    <string name="action_object_layout">Планировка</string>
    <string name="objectList_lastUpdate">ОБНОВЛЕНО</string>
    <string name="swipe_down_update">Потяните вниз для обновления</string>
    <string name="objectList_filter">Фильтр</string>
    <string name="task_confirm">ВЫПОЛНИТЬ</string>
    <string name="task_cancel">ЗАКРЫТЬ</string>
    <string name="error_work_server">Ошибка работы с сервером!</string>
    <string name="object_card_square">Площадь</string>
    <string name="object_card_rooms">Комнат</string>
    <string name="object_card_floor">Этаж</string>
    <string name="object_card_section">Секция</string>
    <string name="object_card_plan">Планировка объекта</string>
    <string name="object_card_reservation">Забронировать объект</string>
    <string name="object_card_close">ЗАКРЫТЬ</string>
    <string name="object_plan_save">Сохранить в галерею</string>
    <string name="clients">Клиенты</string>
    <string name="objectList_search">Поиск по объектам...</string>
    <string name="reservation_agreed">СОГЛАСОВАНО</string>
    <string name="reservation_on_reservation">НА СОГЛАСОВАНИИ</string>
    <string name="object_card_reserved">Объект успешно забронирован!</string>
    <string name="error">Ошибка</string>
    <string name="error_save">Ошибка сохранения</string>
    <string name="reserved">Забронировано</string>
    <string name="object_card_sending_reservation">Отправка запроса на бронь...</string>
    <string name="object_card_prebooking">Предбронирование</string>
    <string name="task_card_execute_task">Завершение задачи...</string>
    <string name="tasklist_empty">Список задач пуст...</string>
    <string name="object_card_plan_download">Загрузка планировки...</string>
    <string name="object_card_plan_request_send">Отправка запроса на сервер...</string>
    <string name="object_plan">Планировка объекта</string>
    <string name="object_floor_plan">Планировка этажа</string>
    <string name="save_error_permission_gallery">Изображения не сохранены, так как приложению необходимо предоставить доступ к галерее!</string>
    <string name="permission_error">Ошибка доступа</string>
    <string name="gallery_permission">Для сохранения планировок в галерею, необходимо предоставить доступ к галерее!</string>
    <string name="gallery_save">Изображения сохранены в галерею</string>
    <string name="object_list_download">Загрузка объектов недвижимости...</string>
    <string name="tasks_list_download">Загрузка задач...</string>
    <string name="clientlist_empty">Список клиентов пуст...</string>
    <string name="objectlist_empty">Список объектов пуст...</string>
    <string name="reservationlist_empty">Список броней пуст...</string>
    <string name="clientslist_download">Загрузка клиентов...Это может занять от 5 до 10 минут.</string>
    <string name="object_card_image_download">Загрузка изображений...</string>
    <string name="client_card_phone">Теле</string>
    <string name="client_card_email">E-mail</string>
    <string name="client_card_manager">Менеджер</string>
    <string name="client_card_address">Адрес</string>
    <string name="card_empty_value"><![CDATA[<Не указан>]]></string>
    <string name="reservationslist_download">Загрузка броней...</string>
    <string name="action_client_message">Сообщение</string>
    <string name="action_client_call">Позвонить</string>
    <string name="auth_error_login">Не указан логин!</string>
    <string name="auth_error_password">Не указан пароль!</string>
    <string name="auth_error_login_password">Не указан логин и пароль!</string>
    <string name="login_screen_forgot_password">Забыли пароль?</string>
    <string name="login_screen_forgot_password_hint">Для восстановления пароля обратитесь к администратору, внутренние телефоны 311 или 253. </string>
    <string name="login_screen_forgot_password_title">Восстановление пароля...</string>
    <string name="user_card_phone">Телефон</string>
    <string name="user_card_email">E-mail</string>
    <string name="user_card_department">Отдел</string>
    <string name="user_profile">Профиль пользователя</string>
    <string name="search">Поиск...</string>
    <string name="object_list_search">Поиск по объектам..</string>
    <string name="clients_list_search">Поиск по клиентам...</string>
    <string name="reservations_list_search">Поиск по броням...</string>
    <string name="tasks_list_search">Поиск по задачам...</string>
    <string name="empty_search">Ничего не найдено...</string>
    <string name="reservation_activity">Бронь -</string>
    <string name="client_empty">Клиент не выбран...</string>
    <string name="client_enter_name">Введите ФИО клиента...</string>
</resources>
