<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/const_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat"
    tools:context=".Activities.LoginActivity">

    <VideoView
        android:id="@+id/vw_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btn_auth"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/rubik_light"
        android:text="@string/auth_progress"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/cb_savePassword"
        app:spinning_bar_color="#FFF"
        app:spinning_bar_padding="3dp"
        app:spinning_bar_width="3dp"></br.com.simplepass.loadingbutton.customViews.CircularProgressButton>

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_light"
        android:text="@string/app_version"
        android:textSize="12dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/view_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1500dp"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view_logo_bg"
        android:layout_width="0dp"
        android:layout_height="295dp"
        android:background="@color/inputColor"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/input_shape"
        android:fontFamily="@font/rubik_light"
        android:gravity="center"
        android:drawableStart="@drawable/ic_https_black_24dp"
        android:hint="@string/text_hint_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/view_logo_bg"
        app:layout_constraintLeft_toLeftOf="@id/edt_login"
        app:layout_constraintRight_toRightOf="@id/edt_login"
        app:layout_constraintStart_toStartOf="@+id/view_logo_bg"
        app:layout_constraintTop_toBottomOf="@+id/edt_login" />

    <EditText
        android:id="@+id/edt_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/input_shape"
        android:backgroundTint="@color/inputColor"
        android:fontFamily="@font/rubik_light"
        android:gravity="center"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:hint="@string/text_hint_login"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@android:color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/view_logo_bg"
        app:layout_constraintStart_toStartOf="@+id/view_logo_bg"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/view_logo_bg"
        app:layout_constraintStart_toStartOf="@+id/view_logo_bg"
        app:layout_constraintTop_toTopOf="@+id/view_logo_bg"
        app:srcCompat="@drawable/ic_monolit_logo" />

    <CheckBox
        android:id="@+id/cb_savePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/save_password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <TextView
        android:id="@+id/login_screen_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="12dp"
        android:text="@string/login_screen_forgot_password"
        app:layout_constraintBottom_toBottomOf="@+id/cb_savePassword"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintTop_toTopOf="@+id/cb_savePassword"></TextView>

</androidx.constraintlayout.widget.ConstraintLayout>