<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/const_layout_accout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context=".Activities.SettingsActivity">

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="19dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Охотников Владислав Юрьевич"/>

    <View
        android:id="@+id/user_card_separate"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/task_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_username">
    </View>

    <TextView
        android:id="@+id/user_card_txt_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/user_card_phone"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/user_card_separate"
        app:layout_constraintTop_toBottomOf="@+id/user_card_separate"></TextView>

    <View
        android:id="@+id/user_card_separate2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@color/task_title"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintRight_toLeftOf="@+id/txt_phoneNumber"
        app:layout_constraintStart_toStartOf="@+id/txt_phoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/txt_phoneNumber"></View>

    <View
        android:id="@+id/user_card_separate3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@color/task_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_department"
        app:layout_constraintTop_toBottomOf="@+id/txt_department"></View>

    <TextView
        android:id="@+id/user_card_txt_department"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/user_card_department"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/user_card_separate" />

    <TextView
        android:id="@+id/txt_department"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:maxLines="1"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/user_card_txt_department"
        tools:text="Жилая недвижимость" />

    <TextView
        android:id="@+id/txt_phoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/user_card_txt_phone"
        app:layout_constraintTop_toBottomOf="@+id/user_card_txt_phone"
        tools:text="+7 (978) 888-00-12"/>

    <Button
        android:id="@+id/btn_exit_task"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded"
        android:text="@string/app_exit"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/user_card_separate3"
        app:layout_constraintStart_toStartOf="@+id/user_card_separate2"
        app:layout_constraintTop_toBottomOf="@+id/user_card_separate2" />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_exit_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_card_separate" />


</androidx.constraintlayout.widget.ConstraintLayout>